--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,15 +36,16 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 [dependencies]
 cosmwasm-schema = "1.5.0"
 cosmwasm-std = { version = "1.5.0", features = [
-    "cosmwasm_1_3",
-    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
-    # "cosmwasm_1_4",
+  "cosmwasm_1_3",
+  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
+  # "cosmwasm_1_4",
 ] }
 cw-storage-plus = "1.1.0"
 cw2 = "1.1.1"
 schemars = "0.8.15"
 serde = { version = "1.0.189", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.49" }
+kujira = "0.8.2"
 
 [dev-dependencies]
 cw-multi-test = "0.17.0"
